--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=Reus_2022
 #Configuraciones JPA
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 
 #Puerto del servidor Tomcat
 server.port=8383
