--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.tienda</groupId>
+	<groupId>UD26</groupId>
 	<artifactId>UD26</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>UD26</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Ej1_UD26</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
